@@ -1,6 +1,6 @@
 package me.emafire003.dev.lightwithin.mixin;
 
-import me.emafire003.dev.lightwithin.events.AllyDeathEvent;
+import me.emafire003.dev.lightwithin.events.EntityDeathEvent;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.damage.DamageSource;
 import org.spongepowered.asm.mixin.Mixin;
@@ -9,11 +9,11 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 @Mixin(LivingEntity.class)
-public abstract class AllyDeathMixin {
+public abstract class EntityDeathMixin {
 
     @Inject(method = "onDeath", at = @At("HEAD"))
-    public void injectOnAttacking(DamageSource damageSource, CallbackInfo ci) {
-        AllyDeathEvent.EVENT.invoker().dead(((LivingEntity) (Object) this), damageSource);
+    public void injectOnDeath(DamageSource damageSource, CallbackInfo ci) {
+        EntityDeathEvent.EVENT.invoker().dead(((LivingEntity) (Object) this), damageSource);
     }
 
 }
