@@ -78,7 +78,7 @@
   "light.description.activation.wind.allies": "Oh winds, aid our movements!",
   "light.description.activation.wind.all": "Blow them away!",
 
-  "light.description.activation.aqua.enemies": "Your enemy shall drown in a watery cage!",
+  "light.description.activation.aqua.enemies": "Your enemy shall be launched away by the waters!",
   "light.description.activation.aqua.all": "Inhabitants of the depths, hear my call and aid me!",
   "light.description.activation.aqua.self": "Let me swiftly move on a watery carpet!",
   "light.description.activation.aqua.allies": "Let us swiftly move on a watery carpet!"
